--- a/ETL_create_database.ipynb
+++ b/ETL_create_database.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'config'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_8440/1673274999.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpsycopg2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mconfig\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdb_password\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'config'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
@@ -34,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,127 +71,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1 Add the function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
     "\n",
-    "file_dir = 'C://Users/opahu/Movies-ETL/'\n",
     "def etl_name():\n",
-    "    \n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
-    "    kaggle_metadata = pd.read_csv('movies_metadata.csv', low_memory=False)\n",
-    "    ratings = pd.read_csv('../Movies-ETL/ratings.csv')\n",
+    "    file_dir = file_dir = 'C://Users/opahu/Movies-ETL/'\n",
+    "    kaggle_metadata = pd.read_csv(f'{file_dir}/movies_metadata.csv', low_memory=False)\n",
+    "    ratings = pd.read_csv(f'{file_dir}/ratings.csv') \n",
     "\n",
     "    # Open and read the Wikipedia data JSON file.\n",
     "    with open(f'{file_dir}/wikipedia-movies.json', mode='r') as file:\n",
     "        wiki_movies_raw = json.load(file)\n",
     "    \n",
-    "    # Write a list comprehension to filter out TV shows.\n",
-    "    wiki_movies =[movie for movie in wiki_movies_raw \\\n",
-    "                  if('Director' in movie or 'Directed by' in movie)\\\n",
-    "                  and 'imdb_link' in movie \\\n",
-    "                  and \"No. of episodes\" not in movie]\n",
+    "    # 3. Write a list comprehension to filter out TV shows.\n",
+    "    wiki_movies = [movie for movie in wiki_movies_raw\n",
+    "               if ('Director' in movie or 'Directed by' in movie)\n",
+    "                   and 'imdb_link' in movie\n",
+    "                   and 'No. of episodes' not in movie]\n",
     "\n",
-    "    # Write a list comprehension to iterate through the cleaned wiki movies list\n",
+    "    # 4. Write a list comprehension to iterate through the cleaned wiki movies list\n",
     "    # and call the clean_movie function on each movie.\n",
     "    clean_movies = [clean_movie(movie) for movie in wiki_movies]\n",
     "\n",
-    "    # Read in the cleaned movies list from Step 4 as a DataFrame.\n",
+    "    # 5. Read in the cleaned movies list from Step 4 as a DataFrame.\n",
     "    wiki_movies_df = pd.DataFrame(clean_movies)\n",
     "\n",
-    "    # Write a try-except block to catch errors while extracting the IMDb ID using a regular expression string and\n",
+    "    # 6. Write a try-except block to catch errors while extracting the IMDb ID using a regular expression string and\n",
     "    #  dropping any imdb_id duplicates. If there is an error, capture and print the exception.\n",
     "    try:\n",
     "        wiki_movies_df['imdb_id'] = wiki_movies_df['imdb_link'].str.extract(r'(tt\\d{7})')\n",
     "        wiki_movies_df.drop_duplicates(subset='imdb_id', inplace=True)\n",
     "        \n",
     "    except:\n",
-    "        print(\"Value not found.\")  \n",
+    "        print(\"Value not found.\")\n",
     "\n",
-    "    #  Write a list comprehension to keep the columns that don't have null values from the wiki_movies_df DataFrame.\n",
+    "    #  7. Write a list comprehension to keep the columns that don't have null values from the wiki_movies_df DataFrame.\n",
     "    wiki_columns_to_keep = [column for column in wiki_movies_df.columns if wiki_movies_df[column].isnull().sum() < len(wiki_movies_df) * 0.9]\n",
     "    wiki_movies_df = wiki_movies_df[wiki_columns_to_keep]\n",
     "\n",
-    "\n",
-    "    # Create a variable that will hold the non-null values from the “Box office” column.\n",
+    "    # 8. Create a variable that will hold the non-null values from the “Box office” column.\n",
     "    box_office = wiki_movies_df['Box office'].dropna()\n",
     "    \n",
-    "    # Convert the box office data created in Step 8 to string values using the lambda and join functions.\n",
+    "    # 9. Convert the box office data created in Step 8 to string values using the lambda and join functions.\n",
     "    box_office = box_office.apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
     "\n",
-    "    # Write a regular expression to match the six elements of \"form_one\" of the box office data.\n",
+    "    # 10. Write a regular expression to match the six elements of \"form_one\" of the box office data.\n",
     "    form_one = r'\\$\\s*\\d+\\.?\\d*\\s*[mb]illi?on'\n",
     "    box_office.str.contains(form_one, flags=re.IGNORECASE).sum()\n",
-    "    \n",
-    "    # Write a regular expression to match the three elements of \"form_two\" of the box office data.\n",
+    "   \n",
+    "    # 11. Write a regular expression to match the three elements of \"form_two\" of the box office data.\n",
     "    form_two = r'\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+(?!\\s[mb]illion)'\n",
     "    box_office.str.contains(form_two, flags=re.IGNORECASE).sum()\n",
     "\n",
-    "    # Add the parse_dollars function.\n",
+    "    # 12. Add the parse_dollars function.\n",
     "    def parse_dollars(s):\n",
+    "        \n",
     "        # if s is not a string, return NaN\n",
     "        if type(s) != str:\n",
     "            return np.nan\n",
     "\n",
     "        # if input is of the form $###.# million\n",
     "        elif re.match(r'\\$\\s*\\d+\\.?\\d*\\s*milli?on', s, flags=re.IGNORECASE):\n",
+    "\n",
     "            # remove dollar sign and \" million\"\n",
     "            s = re.sub('\\$|\\s|[a-zA-Z]','', s)\n",
-    "            # convert to float and multiply by a million\n",
+    "\n",
+    "            # convert to float and multiply by a million & return value\n",
     "            value = float(s) * 10**6\n",
-    "            # return value\n",
     "            return value\n",
     "\n",
     "        # if input is of the form $###.# billion\n",
     "        elif re.match(r'\\$\\s*\\d+\\.?\\d*\\s*billi?on', s, flags=re.IGNORECASE):\n",
+    "\n",
     "            # remove dollar sign and \" billion\"\n",
     "            s = re.sub('\\$|\\s|[a-zA-Z]','', s)\n",
-    "            # convert to float and multiply by a billion\n",
+    "\n",
+    "            # convert to float and multiply by a billion & return value\n",
     "            value = float(s) * 10**9\n",
-    "            # return value\n",
     "            return value\n",
     "\n",
     "        # if input is of the form $###,###,###\n",
     "        elif re.match(r'\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+(?!\\s[mb]illion)', s, flags=re.IGNORECASE):\n",
+    "\n",
     "            # remove dollar sign and commas\n",
     "            s = re.sub('\\$|,','', s)\n",
-    "            # convert to float\n",
+    "\n",
+    "            # convert to float & return value\n",
     "            value = float(s)\n",
-    "            # return value\n",
     "            return value\n",
-    "    \n",
+    "\n",
     "        # otherwise, return NaN\n",
     "        else:\n",
-    "            return np.nan\n",
+    "            return np.nan            \n",
+    "    \n",
     "        \n",
-    "    # Clean the box office column in the wiki_movies_df DataFrame.\n",
+    "    # 13. Clean the box office column in the wiki_movies_df DataFrame.\n",
     "    wiki_movies_df['box_office'] = box_office.str.extract(f'({form_one}|{form_two})', flags=re.IGNORECASE)[0].apply(parse_dollars)\n",
     "    wiki_movies_df.drop('Box office', axis=1, inplace=True)\n",
     "    \n",
-    "    # Clean the budget column in the wiki_movies_df DataFrame.\n",
+    "    # 14. Clean the budget column in the wiki_movies_df DataFrame.\n",
     "    budget = wiki_movies_df['Budget'].dropna()\n",
     "    budget = budget.map(lambda x: ' '.join(x) if type(x) == list else x)\n",
     "    budget = budget.str.replace(r'\\$.*[-—–](?![a-z])', '$', regex=True)\n",
     "    wiki_movies_df['budget'] = budget.str.extract(f'({form_one}|{form_two})', flags=re.IGNORECASE)[0].apply(parse_dollars)\n",
     "\n",
-    "    # Clean the release date column in the wiki_movies_df DataFrame.\n",
+    "    # 15. Clean the release date column in the wiki_movies_df DataFrame.\n",
     "    release_date = wiki_movies_df['Release date'].dropna().apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
-    "    date_form_one = r'(?:January|February|March|April|May|June|July|August|September|October|November|December)\\s[123]?\\d,\\s\\d{4}'\n",
-    "    date_form_two = r'\\d{4}.[01]\\d.[0123]\\d'\n",
+    "    date_form_one = r'(?:January|February|March|April|May|June|July|August|September|October|November|December)\\s[123]\\d,\\s\\d{4}'\n",
+    "    date_form_two = r'\\d{4}.[01]\\d.[123]\\d'\n",
     "    date_form_three = r'(?:January|February|March|April|May|June|July|August|September|October|November|December)\\s\\d{4}'\n",
     "    date_form_four = r'\\d{4}'\n",
     "    release_date.str.extract(f'({date_form_one}|{date_form_two}|{date_form_three}|{date_form_four})', flags=re.IGNORECASE)\n",
     "    wiki_movies_df['release_date'] = pd.to_datetime(release_date.str.extract(f'({date_form_one}|{date_form_two}|{date_form_three}|{date_form_four})')[0], infer_datetime_format=True)\n",
     "\n",
-    "    # Clean the running time column in the wiki_movies_df DataFrame.\n",
+    "    # 16. Clean the running time column in the wiki_movies_df DataFrame.\n",
     "    running_time = wiki_movies_df['Running time'].dropna().apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
     "    running_time_extract = running_time.str.extract(r'(\\d+)\\s*ho?u?r?s?\\s*(\\d*)|(\\d+)\\s*m')\n",
     "    running_time_extract = running_time_extract.apply(lambda col: pd.to_numeric(col, errors='coerce')).fillna(0)\n",
     "    wiki_movies_df['running_time'] = running_time_extract.apply(lambda row: row[0]*60 + row[1] if row[2] == 0 else row[2], axis=1)\n",
     "    wiki_movies_df.drop('Running time', axis=1, inplace=True)\n",
+    "    \n",
     "     \n",
     "    # 2. Clean the Kaggle metadata.\n",
     "    kaggle_metadata = kaggle_metadata[kaggle_metadata['adult'] == 'False'].drop('adult',axis='columns')\n",
@@ -212,13 +204,13 @@
     "    kaggle_metadata['budget'] = kaggle_metadata['budget'].astype(int)\n",
     "    kaggle_metadata['id'] = pd.to_numeric(kaggle_metadata['id'], errors='raise')\n",
     "    kaggle_metadata['popularity'] = pd.to_numeric(kaggle_metadata['popularity'], errors='raise')\n",
-    "    \n",
+    "\n",
     "    # 3. Merged the two DataFrames into the movies DataFrame.\n",
     "    movies_df = pd.merge(wiki_movies_df, kaggle_metadata, on='imdb_id', suffixes=['_wiki','_kaggle'])\n",
     "\n",
     "    # 4. Drop unnecessary columns from the merged DataFrame.\n",
     "    movies_df.drop(columns=['title_wiki','release_date_wiki','Language','Production company(s)'], inplace=True)\n",
-    "\n",
+    "    \n",
     "    # 5. Add in the function to fill in the missing Kaggle data.\n",
     "    def fill_missing_kaggle_data(df, kaggle_column, wiki_column):\n",
     "        df[kaggle_column] = df.apply(\n",
@@ -230,7 +222,7 @@
     "    fill_missing_kaggle_data(movies_df, 'runtime', 'running_time')\n",
     "    fill_missing_kaggle_data(movies_df, 'budget_kaggle', 'budget_wiki')\n",
     "    fill_missing_kaggle_data(movies_df, 'revenue', 'box_office')\n",
-    "    movies_df\n",
+    "    \n",
     "\n",
     "    # 7. Filter the movies DataFrame for specific columns.\n",
     "    movies_df = movies_df.loc[:, ['imdb_id','id','title_kaggle','original_title','tagline','belongs_to_collection','url','imdb_link',\n",
@@ -258,53 +250,87 @@
     "                  'Based on':'based_on'\n",
     "                 }, axis='columns', inplace=True)\n",
     "\n",
+    "\n",
     "    # 9. Transform and merge the ratings DataFrame.\n",
-    "    # Rename userID to count, pivot data, columns=rating and values=count\n",
+    "    rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count()\n",
+    "    #Rename the \"userId\" column to \"count.\"\n",
+    "    rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1)\n",
+    "    #Pivot the data: movieId = index, columns =rating values, rows = counts for each rating value.\n",
     "    rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
     "                .rename({'userId':'count'}, axis=1) \\\n",
     "                .pivot(index='movieId',columns='rating', values='count')\n",
-    "    \n",
-    "    # Rename the column\n",
+    "    #Rename the columns\n",
     "    rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]\n",
-    "    \n",
-    "    # Left join, to keep everything in movies_df\n",
+    "    #Left merge(keep everything in movies_df)\n",
     "    movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')\n",
-    "    \n",
-    "    # Fill missing value with 0 \n",
+    "    #Fill the missing valuse with 0\n",
     "    movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create the connection to the PostgreSQL database\n",
-    "\n",
-    "#Add to movie data to SQL\n",
+    "    \n",
+    "    \n",
+    "    #Add to movie data to SQL\n",
     "    db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/movie_data\"\n",
     "    engine = create_engine(db_string)\n",
     "    movies_df.to_sql(name='movies', con=engine, if_exists='replace')\n",
     "    \n",
+    "    # create a variable for the number of rows imported\n",
     "    rows_imported = 0\n",
+    "    \n",
     "    # get the start_time from time.time()\n",
     "    start_time = time.time()\n",
-    "    for data in pd.read_csv(f'Resources/ratings.csv', chunksize=1000000):\n",
+    "    for data in pd.read_csv(f'{file_dir}/ratings.csv', chunksize=1000000):\n",
+    "        \n",
+    "        # print out the range of rows that are being imported\n",
     "        print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
+    "        \n",
     "        data.to_sql(name='ratings', con=engine, if_exists='append')\n",
+    "        \n",
+    "        # increment the number of rows imported by the size of 'data'\n",
     "        rows_imported += len(data)\n",
     "\n",
     "    # add elapsed time to final print out\n",
-    "        print(f'Done. {time.time() - start_time} total seconds elapsed')\n"
+    "        print(f'Done. {time.time() - start_time} total seconds elapsed')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing rows 0 to 1000000...Done. 24.263794422149658 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 48.316850662231445 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 72.19455814361572 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 96.24146151542664 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 119.96369862556458 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 144.09158515930176 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 168.16622352600098 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 191.73870038986206 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 215.42305898666382 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 239.13864088058472 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 263.4032573699951 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 286.9508936405182 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 310.72571182250977 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 334.51312947273254 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 358.07042264938354 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 382.20838928222656 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 405.80047154426575 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 429.67746090888977 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 453.0572700500488 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 477.16819405555725 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 501.0143141746521 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 524.865775346756 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 548.6049227714539 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 573.1750299930573 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 597.086216211319 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 620.9658184051514 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 621.5243427753448 total seconds elapsed\n"
+     ]
+    }
+   ],
    "source": [
     "etl_name()"
    ]
